--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -28,8 +28,8 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        run: python ${{ github.workspace }}/benchmark.py
-
+        run: python benchmark.py
+        
       - name: Save Results
         run: |
           git config --global user.name 'Benchmark Bot'
